--- a/test/fixtures/tokens.yml
+++ b/test/fixtures/tokens.yml
@@ -6,3 +6,12 @@ luiz_authentication:
   user_agent: "cURL/17"
   expires_at: <%= 30.days.from_now %>
   revoked_at: nil
+
+mario_authentication:
+  user: mario
+  purpose: "authentication"
+  value: <%= SecureRandom.alphanumeric(20) %>
+  ip_address: "127.0.0.1"
+  user_agent: "cURL/17"
+  expires_at: <%= 30.days.from_now %>
+  revoked_at: nil
