--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -2,3 +2,8 @@ luiz:
   name: Luiz Vasconcellos
   email_address: luiz@example.org
   password_digest: "$2a$12$IaZJP6haC9AstsyHaq/RN.7MUS//MCj0vP0bLpgNgqLWrYEyQvNyO" # mystrongpassword
+
+mario:
+  name: Mario
+  email_address: mario@nintendo.com
+  password_digest: "$2a$12$IaZJP6haC9AstsyHaq/RN.7MUS//MCj0vP0bLpgNgqLWrYEyQvNyO" # mystrongpassword
